syntax = "proto3";
package services;

option go_package=".;services";

import "google/api/annotations.proto";

message ProductRequest {
  int32 pro_id = 1;
}

message ProductResponse {
  int32 stock_status = 1;
  string product_name = 2;
}
service ProductService {
  rpc GetProductStockStatus(ProductRequest) returns (ProductResponse){
    option(google.api.http) = {
      get:"/v1/product_stock/{pro_id}"
    };
  }
  rpc GetProductName(ProductRequest) returns (ProductResponse);
}